--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,15 +1,179 @@
 /* CSS stylesheet  for application */
-
-table {
-    border-collapse: collapse;
-    border: 1px solid silver;
-    padding:15px;
+body{
+    font-family:'Montserrat',sans-serif !important;
+}
+.navbar-custom{
+    background-color: #3c1460 !important;
+}
+.img-fluid{
+    max-width: 70% !important;
+}
+.btn{
+    background-color: #5c1f91 !important;
+    color: white !important;
+    border-radius: 1rem !important;
+    padding-top: 0.275rem !important;
+    padding-right: 0.75rem !important;
+    padding-bottom: 0.275rem !important;
+    padding-left: 0.75rem !important;
+    font-weight:500 !important;
+    font-size: 0.8rem !important;
+}
+a{
+    color: white !important;
+}
+footer{
+    background-color: #3c1460;
+    color: white;
+    text-align: center;
+}
+a,
+a:hover {
+    text-decoration: none;
+    color: inherit;
 }
 
-th, td {
-    border: 1px solid silver;
-    padding:15px;
+.section-products {
+    padding: 80px 0 54px;
 }
 
+.section-products .header {
+    margin-bottom: 50px;
+}
+
+.section-products .header h3 {
+    font-size: 1rem;
+    color: #fe302f;
+    font-weight: 500;
+}
+
+.section-products .header h2 {
+    font-size: 2.2rem;
+    font-weight: 400;
+    color: #444444;
+}
+
+.section-products .single-product {
+    margin-bottom: 26px;
+    text-align: center;
+}
+
+.section-products .single-product .part-1 {
+    position: relative;
+    height: 290px;
+    max-height: 290px;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+
+.section-products .single-product .part-1::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transition: all 0.3s;
+}
+
+.section-products .single-product:hover .part-1::before {
+    transform: scale(1.2,1.2) rotate(5deg);
+}
+
+.section-products #product-1 .part-1::before {
+    background: url("images/chocolate.png") no-repeat center;
+    background-size: cover;
+    transition: all 0.3s;
+}
+
+.section-products #product-2 .part-1::before {
+    background: url("images/lemon.png") no-repeat center;
+    background-size: cover;
+}
+
+.section-products #product-3 .part-1::before {
+    background: url("images/strawberry.png") no-repeat center;
+    background-size: cover;
+}
+
+.section-products #product-4 .part-1::before {
+    background: url("images/blueberry.png") no-repeat center;
+    background-size: cover;
+}
+.section-products #product-5 .part-1::before {
+    background: url("images/rum.png") no-repeat center;
+    background-size: cover;
+}
+.section-products #product-6 .part-1::before {
+    background: url("images/crispy.png") no-repeat center;
+    background-size: cover;
+}
+.section-products #product-7 .part-1::before {
+    background: url("images/orange.png") no-repeat center;
+    background-size: cover;
+}
+.section-products #product-8 .part-1::before {
+    background: url("images/rasberry.png") no-repeat center;
+    background-size: cover;
+}
+.section-products #product-9 .part-1::before {
+    background: url("images/bluecheese.png") no-repeat center;
+    background-size: cover;
+}
+.section-products #product-10 .part-1::before {
+    background: url("images/almond.png") no-repeat center;
+    background-size: cover;
+}
+.section-products #product-11 .part-1::before {
+    background: url("images/rasberry2.png") no-repeat center;
+    background-size: cover;
+}
+.section-products #product-12 .part-1::before {
+    background: url("images/strawberry2.png") no-repeat center;
+    background-size: cover;
+}
+
+
+.section-products .single-product .part-1 .new {
+    left: 0;
+    background-color: #444444;
+}
+
+.section-products .single-product .part-1 ul {
+    position: absolute;
+    bottom: -41px;
+    left: 20px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    opacity: 0;
+    transition: bottom 0.5s, opacity 0.5s;
+}
+.section-products .single-product .part-1 ul li a:hover {
+    color: #fe302f;
+}
+
+.section-products .single-product .part-2 .product-title {
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin-bottom: 0.6vh;
+}
+
+.section-products .single-product .part-2 h4{
+    display: inline-block;
+    font-size: 1rem;
+}
+.product-des{
+    width: 100%;
+    margin-bottom: 2vh;
+    color: rgb(71, 71, 71);
+    font-size: 0.85rem !important;
+    font-weight: 500;
+}
+.SoMe{
+    filter: brightness(0) invert(1);
+    margin: 10px 5px 5px;
+}
 
 
