--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -40,13 +40,6 @@ a:hover {
 .section-products .header {
     margin-bottom: 50px;
 }
-
-.section-products .header h3 {
-    font-size: 1rem;
-    color: #fe302f;
-    font-weight: 500;
-}
-
 .section-products .header h2 {
     font-size: 2.2rem;
     font-weight: 400;
@@ -82,55 +75,55 @@ a:hover {
 }
 
 .section-products #product-1 .part-1::before {
-    background: url("images/chocolate.png") no-repeat center;
+    background: url("../images/chocolate.png") no-repeat center;
     background-size: cover;
     transition: all 0.3s;
 }
 
 .section-products #product-2 .part-1::before {
-    background: url("images/lemon.png") no-repeat center;
+    background: url("../images/lemon.png") no-repeat center;
     background-size: cover;
 }
 
 .section-products #product-3 .part-1::before {
-    background: url("images/strawberry.png") no-repeat center;
+    background: url("../images/strawberry.png") no-repeat center;
     background-size: cover;
 }
 
 .section-products #product-4 .part-1::before {
-    background: url("images/blueberry.png") no-repeat center;
+    background: url("../images/blueberry.png") no-repeat center;
     background-size: cover;
 }
 .section-products #product-5 .part-1::before {
-    background: url("images/rum.png") no-repeat center;
+    background: url("../images/rum.png") no-repeat center;
     background-size: cover;
 }
 .section-products #product-6 .part-1::before {
-    background: url("images/crispy.png") no-repeat center;
+    background: url("../images/crispy.png") no-repeat center;
     background-size: cover;
 }
 .section-products #product-7 .part-1::before {
-    background: url("images/orange.png") no-repeat center;
+    background: url("../images/orange.png") no-repeat center;
     background-size: cover;
 }
 .section-products #product-8 .part-1::before {
-    background: url("images/rasberry.png") no-repeat center;
+    background: url("../images/rasberry.png") no-repeat center;
     background-size: cover;
 }
 .section-products #product-9 .part-1::before {
-    background: url("images/bluecheese.png") no-repeat center;
+    background: url("../images/bluecheese.png") no-repeat center;
     background-size: cover;
 }
 .section-products #product-10 .part-1::before {
-    background: url("images/almond.png") no-repeat center;
+    background: url("../images/almond.png") no-repeat center;
     background-size: cover;
 }
 .section-products #product-11 .part-1::before {
-    background: url("images/rasberry2.png") no-repeat center;
+    background: url("../images/rasberry2.png") no-repeat center;
     background-size: cover;
 }
 .section-products #product-12 .part-1::before {
-    background: url("images/strawberry2.png") no-repeat center;
+    background: url("../images/strawberry2.png") no-repeat center;
     background-size: cover;
 }
 
@@ -149,9 +142,6 @@ a:hover {
     list-style: none;
     opacity: 0;
     transition: bottom 0.5s, opacity 0.5s;
-}
-.section-products .single-product .part-1 ul li a:hover {
-    color: #fe302f;
 }
 
 .section-products .single-product .part-2 .product-title {
@@ -175,5 +165,20 @@ a:hover {
     filter: brightness(0) invert(1);
     margin: 10px 5px 5px;
 }
+.tablediv{
+ width: 15%;
+    margin: 0px;
 
+}
+table{
+    width: 109.9% !important;
+    vertical-align: middle;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #3c1460 !important;
+    padding: -20px;
+}
+td, tr{
+    width: 100% !important;
+}
 
